test/source/carehub/main/default/objects/EventConfiguration__c/EventConfiguration__c.object-meta.xml
<CustomObject>
    <label>Event Configuration</label>
    <nameField>
        <label>Event Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>