test/source/carehub/main/default/objects/EventConfiguration__c/fields/CaseAction__c.field-meta.xml
<CustomField>
    <fullName>CaseAction__c</fullName>
    <label>Case Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upsert</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>