test/source/carehub/main/default/objects/EventConfiguration__c/fields/ParentCodeId__c.field-meta.xml
<CustomField>
    <fullName>ParentCodeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Code Name</label>
    <referenceTo>EventConfiguration__c</referenceTo>
    <relationshipLabel>Event Configurations</relationshipLabel>
    <relationshipName>EventConfigurations</relationshipName>
    <type>Lookup</type>
</CustomField>