test/source/carehub/main/default/objects/EventConfiguration__c/fields/Planable__c.field-meta.xml
<CustomField>
    <fullName>Planable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planable</label>
    <type>Checkbox</type>
</CustomField>