test/source/carehub/main/default/objects/EventConfiguration__c/fields/ReopenCaseWithinXMinutes__c.field-meta.xml
<CustomField>
    <fullName>ReopenCaseWithinXMinutes__c</fullName>
    <label>Reopen Case Within X Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>