test/source/carehub/main/default/objects/EventConfiguration__c/fields/SearchForClientComponentVisibility__c.field-meta.xml
<CustomField>
    <fullName>SearchForClientComponentVisibility__c</fullName>
    <label>Search for Client Component Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visible</fullName>
                <default>true</default>
                <label>Visible</label>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>