test/source/carehub/main/default/objects/EventConfiguration__c/fields/Sync__c.field-meta.xml
<CustomField>
    <fullName>Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Decide whether to synchronise data from External Systems</inlineHelpText>
    <label>Sync</label>
    <type>Checkbox</type>
</CustomField>