test/source/carehub/main/default/objects/EventConfiguration__c/fields/WaitingMinutes__c.field-meta.xml
<CustomField>
    <fullName>WaitingMinutes__c</fullName>
    <inlineHelpText>This refers to the duration, measured in minutes, before a case is assigned to a queue in the system.</inlineHelpText>
    <label>Waiting Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>