test/source/carehub/main/default/objects/EventConfiguration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Category__c</columns>
    <columns>CaseAction__c</columns>
    <columns>CloseEventCodes__c</columns>
    <columns>Sync__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>